RESOLVED FIXED89142
[EFL] Cursor is not drawn when opengl_x11 backend is choosen.
https://bugs.webkit.org/show_bug.cgi?id=89142
Summary [EFL] Cursor is not drawn when opengl_x11 backend is choosen.
Ryuan Choi
Reported 2012-06-14 17:31:21 PDT
Patch will be added.
Attachments
Patch (1.77 KB, patch)
2012-06-14 17:52 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2012-06-14 17:52:12 PDT
Gyuyoung Kim
Comment 2 2012-07-16 18:02:08 PDT
Comment on attachment 147693 [details] Patch Looks good to me.
Simon Hausmann
Comment 3 2012-07-18 01:26:13 PDT
Comment on attachment 147693 [details] Patch rs=me
WebKit Review Bot
Comment 4 2012-07-18 01:37:46 PDT
Comment on attachment 147693 [details] Patch Clearing flags on attachment: 147693 Committed r122934: <http://trac.webkit.org/changeset/122934>
WebKit Review Bot
Comment 5 2012-07-18 01:37:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.