[EFL] Cursor is not drawn when opengl_x11 backend is choosen. https://bugs.webkit.org/show_bug.cgi?id=89142

Reviewed by Simon Hausmann.

If theme based cursor is not given, WebKit/Efl only uses Ecore_X based
cursor as a fallback after checked whether current engine is using EcoreX.
This patch adds opengl_x11 which is one of Ecore_X based engine in check
lists to draw fallback cursor.

* platform/efl/EflScreenUtilities.cpp:
(WebCore::isUsingEcoreX):


Canonical link: https://commits.webkit.org/109392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122934 268f45cc-cd09-0410-ab3c-d52691b4dbfc